dropshot/tests/fail/bad_server_endpoint24.stderr
error: endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, HttpError>
  --> tests/fail/bad_server_endpoint24.rs:22:7
   |
22 | trait MyServer {
   |       ^^^^^^^^

error: endpoint `abi_endpoint` must not use an alternate ABI
  --> tests/fail/bad_server_endpoint24.rs:30:11
   |
30 |     async extern "C" fn abi_endpoint(
   |           ^^^^^^^^^^
